--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="./style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | Ping coming soon page</title>
+  <script src="https://kit.fontawesome.com/9630cfcb36.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
