--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
 
   <footer>
     <div class="social-logos">
-      <img src="./" alt="">
+      <i class="fa-brands fa-facebook-f"></i>
+      <i class="fa-brands fa-twitter"></i>
+      <i class="fa-brands fa-instagram"></i>
     </div>
-    &copy; Copyright Ping. All rights reserved.
+    <span>&copy; Copyright Ping. All rights reserved.</span>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
