main and header html

--- a/index.html
+++ b/index.html
@@ -10,19 +10,17 @@
 </head>
 <body>
   <header>
-    We are launching soon!
-
-    Subscribe and get notified
+    <img src="./images/logo.svg" alt="logo">
+    <h1>We are launching <strong>soon!</strong></h1>
+    <p>Subscribe and get notified</p>
   </header>
   <main>
-
+    <form>
+      <input type="email" id="mailInput" placeholder="Your email address...">
+      <button>Notify Me</button>
+    </form>
+    <img src="./images/illustration-dashboard.png" alt="dashpoard">
   </main>
-
-
-  Notify Me
-
-  
-
   <footer>
     <div class="social-logos">
       <i class="fa-brands fa-facebook-f"></i>
