--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <img src="./images/logo.svg" alt="logo">
+    <img src="./images/logo.svg" alt="logo" class="logo">
     <h1>We are launching <strong>soon!</strong></h1>
     <p>Subscribe and get notified</p>
   </header>
@@ -19,7 +19,7 @@
       <input type="email" id="mailInput" placeholder="Your email address...">
       <button>Notify Me</button>
     </form>
-    <img src="./images/illustration-dashboard.png" alt="dashpoard">
+    <img src="./images/illustration-dashboard.png" alt="dashpoard" class="dashboard">
   </main>
   <footer>
     <div class="social-logos">
