--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@100;300;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | Ping coming soon page</title>
@@ -11,7 +14,7 @@
 <body>
   <header>
     <img src="./images/logo.svg" alt="logo" class="logo">
-    <h1>We are launching <strong>soon!</strong></h1>
+    <h1><span>We are launching </span><strong>soon!</strong></h1>
     <p>Subscribe and get notified</p>
   </header>
   <main>
