--- a/index.html
+++ b/index.html
@@ -26,11 +26,18 @@
   </main>
   <footer>
     <div class="social-logos">
-      <i class="fa-brands fa-facebook-f"></i>
-      <i class="fa-brands fa-twitter"></i>
-      <i class="fa-brands fa-instagram"></i>
+      <button class="btn">
+        <i class="fa-brands fa-facebook-f"></i>
+      </button>
+      <button class="btn">
+        <i class="fa-brands fa-twitter"></i>
+      </button>
+      <button class="btn">
+        <i class="fa-brands fa-instagram"></i>
+      </button>
     </div>
-    <span>&copy; Copyright Ping. All rights reserved.</span>
+    
+    <span class="copyright">&copy; Copyright Ping. All rights reserved.</span>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="#">Your Name Here</a>.
