--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <span class="copyright">&copy; Copyright Ping. All rights reserved.</span>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="https://github.com/LironeFitoussi" target="_blank">Lirone Fitoussi</a>.
     </p>
   </footer>
 </body>
