--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@100;300;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./desktop.css" media="screen and (min-width: 900px)">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | Ping coming soon page</title>
   <script src="https://kit.fontawesome.com/9630cfcb36.js" crossorigin="anonymous"></script>
@@ -19,7 +20,7 @@
   </header>
   <main>
     <form>
-      <input type="email" id="mailInput" placeholder="Your email address...">
+      <input type="text" id="mailInput" placeholder="Your email address...">
       <button>Notify Me</button>
     </form>
     <img src="./images/illustration-dashboard.png" alt="dashpoard" class="dashboard">
@@ -43,5 +44,7 @@
       Coded by <a href="https://github.com/LironeFitoussi" target="_blank">Lirone Fitoussi</a>.
     </p>
   </footer>
+
+  <script src="./main.js"></script>
 </body>
 </html>
